grey window on hover for editable items

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,3 +106,6 @@ label.error {display:block;}
 
 // Quick edit css
 .invisible{display:none;}
+
+.quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;}
+.quick-edit{padding:2px;}
