--- a/app/views/user_mailer/user_details_changed.text.erb
+++ b/app/views/user_mailer/user_details_changed.text.erb
@@ -2,6 +2,7 @@ Welcome to Books That Grow
 
 Hello, <%= @username %>  
 Your account information has been edited by: <%= @logged_in_user%>
+Following details have been modified : <%= @changed_attributes%>
 
 To login to the site, just follow this link: <%= @login_url %> 
 
