--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -2,6 +2,8 @@ Welcome to Books That Grow
 
 Your account has been created with Books That Grow
 
+Firstname: <%= @firstname %> 
+Lastname: <%= @lastname %>
 Username: <%= @username %> 
 Email: <%= @email %>
 
