--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -17,37 +17,38 @@
 				    </div>
 				  	<% end %>
 	            <div class="row">
-	                <div class="col-sm-3">
+	                <div class="col-sm-4">
 	                    <div class="form-group">
 	                    	<%= f.label :title, "Book Title", :class=>"control-label" %><span class="asterisk">*</span> </br>
 	                    	<%= f.text_field :title,  :required=>true, :class=>"form-control" %>
 	                    </div>
 	                </div>
-	                <div class="col-sm-9">
-	                    <div class="form-group">
-			     		   <%= f.label :description, "Book Description", :class=>"control-label" %>
-			     		   <%= f.text_area :description, :class=>"form-control" %>
-	                    </div>
-	                </div>
-	            </div>
-	            <div class="row">
-	                <div class="col-sm-3">
+	                <div class="col-sm-4">
 	                    <div class="form-group">
 				    		<%= f.label :author, "Book Author", :class=>"control-label"%>
 				    		<%= f.text_field :author, :class=>"form-control" %>
 	                    </div>
 	                </div>
+	                
+	            </div>
+	            <div class="row">
+                    <div class="col-sm-8">
+                        <div class="form-group">
+		     		        <%= f.label :description, "Book Description", :class=>"control-label" %>
+		     		        <%= f.text_area :description, :class=>"form-control" %>
+                        </div>
+                    </div> 
 	            </div>
 	            <div class="form-row form-group">
 					<div class="row">
-				    	<div class="col-md-6">
+				    	<div class="col-md-4">
 							<label class="form-label">Small Book Cover</label>	
 							<% if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
 								<%= image_tag f.object.book_cover.url(:small) %>
 							<% end %>
 							<%= f.file_field :book_cover %>
 				    	</div> 
-				    	<div class="col-md-6" >
+				    	<div class="col-md-4" >
 							<label class="form-label">EPub Book</label><span class="asterisk">*</span> 	<br />
 							<%if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
 								<%= f.object.epub_file_name %>
@@ -60,7 +61,7 @@
 
 	            <div class="form-row form-group" style="margin-top:50px;">
 					<div class="row">
-				    	<div class="col-md-10">
+				    	<div class="col-md-8">
 							<label class="form-label">Preview Book Image</label>	
 							<div>
 								<%=f.fields_for :preview_images do |fb|%>
@@ -95,7 +96,11 @@
 
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Submit", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' }, :onclick => "return validateForm();"  %>
+				<% if action_name.eql?('new') || action_name.eql?('create') %>
+	                <%= f.submit "Submit", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' }, :onclick => "return validateForm();"  %>
+				<%else%>
+				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' }, :onclick => "return validateForm();"  %>
+				<%end%>	
 				<%= link_to 'Return to Book List', books_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
