--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,7 +151,7 @@
         <%unless current_user.blank?%>  
         <% if current_user.role.name.eql?('Web Admin')%>  
             <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id) %></li>  
-			<li><%= link_to '<i class="fa fa-lock increase_size"></i>'.html_safe + "Change Password", '', :class=>"change_password", data: { toggle: "modal", target: "#changePassword", input: current_user.id} %></li>
+			<!-- <li><%#= link_to '<i class="fa fa-lock increase_size"></i>'.html_safe + "Change Password", '', :class=>"change_password", data: { toggle: "modal", target: "#changePassword", input: current_user.id} %></li> -->
         <%else%>
             <li><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "My Profile", user_path(current_user, :role_id=>current_user.role_id, :school_id=>current_user.school_id) %></li>  
         <%end%>
