--- a/app/views/user_mailer/user_email_changed.text.erb
+++ b/app/views/user_mailer/user_email_changed.text.erb
@@ -1,9 +1,12 @@
 Welcome to Books That Grow
 
 Hello, <%= @username %>  
+
 Your account email address has been changes by: <%= @logged_in_user%>
 
-Your email address is: <%= @new_email%>
+Following details have been modified : <%= @changed_attributes%>
+
+Your new email address is: <%= @new_email%>
 
 To login to the site, just follow this link: <%= @login_url %> 
 
