--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -7,8 +7,8 @@
 	                </div>
 	                <div class="col-sm-3">
 	                    <div class="form-group">
-			     		   <%= f.label :last_name, "Last Name", :class=>"control-label" %>
-			     		   <%= f.text_field :last_name, :class=>"form-control" %>
+			     		   <%= f.label :last_name, "Last Name", :class=>"control-label" %><span class="asterisk">*</span>
+			     		   <%= f.text_field :last_name, :required=>true, :class=>"form-control" %>
 	                    </div>
 	                </div>
 	            </div>
@@ -16,7 +16,7 @@
 	                <div class="col-sm-3">
 	                    <div class="form-group">
 	                    	<%= f.label :username, "Username", :class=>"control-label" %><span class="asterisk">*</span>
-							<%= f.text_field :username, :class=>"form-control clearfix" %>
+							<%= f.text_field :username, :class=>"form-control clearfix class_no_space" %>
 		    			    <%#= f.text_field :username, :class=>"form-control username_validation" %>
 							<span class="help-inline error_box"></span>
 	                    </div>
@@ -66,13 +66,13 @@
 	                    <div class="col-sm-3">
 	                        <div class="form-group">
 			    		        <%= f.label :password, :class=>"control-label" %><span class="asterisk">*</span>
-			    			    <%= f.password_field :password, :required=>true, :class=>"form-control class_password" %>
+			    			    <%= f.password_field :password, :required=>true, :class=>"form-control class_password class_no_space" %>
 	                        </div>
 	                    </div>
 	                    <div class="col-sm-3">
 	                        <div class="form-group">
 			    			    <%= f.label :password_confirmation, :class=>"control-label" %><span class="asterisk">*</span>
-			    			    <%= f.password_field :password_confirmation, :required=>true, :class=>"form-control" %>
+			    			    <%= f.password_field :password_confirmation, :required=>true, :class=>"form-control class_no_space" %>
 	                        </div>
 	                    </div>
 	                </div>
@@ -83,15 +83,17 @@
 	        		    <%=render 'parent_fields', f: fb%>
 	        	    <%end%>
 					<div class="add-parent">
-				    <%= link_to_add_fields "Add More Parent Details", f, :parents %>
-				</div>
+					    <%= link_to_add_fields "Add More Parent Details", f, :parents %>
+				    </div>
 				<div class="row">
-	            	<div class="col-sm-3">
+	            	<div class="col-sm-6">
 	                	<div class="form-group">
 	                    	<%= f.label :grade, "Grade Level", :class=>"control-label add-student-label" %>
 		    			    <%= f.select :grade, options_for_select(@reading_grades.collect {|g| [ g.grade_name, g.id ] }, :selected=>f.object.grade), {:prompt=>"Select Grade Level", :class=>"form-control"} %>
 	                    </div>
 	                </div>
+				</div>	
+				<div class="row">
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 	                    	<%= f.label :reading_ability, "Reading Ability", :class=>"control-label add-student-label" %>
