--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,11 @@
 		        <%= render 'common_fields', f: f %>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+				<% if action_name.eql?('new') || action_name.eql?('create') %>
+	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+				<% else %>
+				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' } %>
+				<% end %>
 				<% if @role_id.name.eql?('Web Admin')%>
 					<%= link_to 'Return to User List', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
 				<% elsif @role_id.name.eql?('School Admin')%>
