--- a/app/views/user_mailer/user_email_changed.text.erb
+++ b/app/views/user_mailer/user_email_changed.text.erb
@@ -1,6 +1,4 @@
-Welcome to Books That Grow
-
-Hello, <%= @username %>  
+Hello, <%= @name %>  
 
 Your account email address has been changes by: <%= @logged_in_user%>
 
@@ -18,4 +16,6 @@ OR
 
 To check out account changes follow this link: <%= @link%>
 
-Thanks, Books That Grow Team!
+Thanks,
+
+The Books That Grow Team
