--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,20 +1,19 @@
-Welcome to Books That Grow
+Welcome to Books That Grow!
 
-Your account has been created with Books That Grow
+Hello <%= @firstname %>,
 
-Firstname: <%= @firstname %> 
-Lastname: <%= @lastname %>
-Username: <%= @username %> 
-Email: <%= @email %>
+A Books That Grow account has been created for you. 
 
-To login to the site, just follow this link: <%= @login_url %> 
+You can log in to Books That Grow using the following information.
 
-OR 
+Username: <%= @username %>
+Email Address: <%= @email %>
 
-To reset password click on following link: <%= @reset_pass_url %> 
+To reset your password, click on the following link: <%= @reset_pass_url %> 
 
-OR
+We hope you enjoy Books That Grow!
 
-To check out account changes follow this link: <%= @link%>
+Sincerely,
 
-Thanks, Books That Grow Team!
+The Books That Grow Team
+
