--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -27,7 +27,7 @@
 		<%= label_tag 'password_confirmation_label', "Confirm Password", :class => "form-label" %>
 		<%= password_field_tag 'password_confirmation',nil, class: "form-control pword", :required=>true %>
 		
-		<%= submit_tag "Reset password ", class: "btn btn-success btn-cons", data: { disable_with: 'Resetting...' }%>
+		<%= submit_tag "Submit", class: "btn btn-success btn-cons", data: { disable_with: 'Resetting...' }%>
 		
    <% end %>
 </div>
