--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -111,11 +111,12 @@
 	        <div class="panel-footer" data-no-turbolink>
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
 	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+					<%= link_to 'Return to Classroom List', classrooms_path(:school_id=>@school.id), class: "btn btn-white btn-xs"%>
 				<%else%>
 				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' } %>
+					<%= link_to 'Cancel', classrooms_path(:school_id=>@school.id), class: "btn btn-white btn-xs"%>
 				<%end%>	
-				<%= link_to 'Return to Classroom List', classrooms_path(:school_id=>@school.id), class: "btn btn-white btn-xs"%>
-	       </div>
+		   </div>
  	       <% end %>
 	</div>    
 </div>
