--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,19 +16,28 @@
 	        <div class="panel-footer" data-no-turbolink>
 				<% if action_name.eql?('new') || action_name.eql?('create') %>
 	                <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Saving...' } %>
+					<% if @role_id.name.eql?('Web Admin')%>
+						<%= link_to 'Return to User List', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('School Admin')%>
+					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('Teacher')%>
+					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('Student')%>
+					    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<%end%>
 				<% else %>
 				    <%= f.submit "Update", class: "btn btn-primary btn-sm btn-xs save-btns", data: { disable_with: 'Updating...' } %>
+					<% if @role_id.name.eql?('Web Admin')%>
+						<%= link_to 'Cancel', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('School Admin')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('Teacher')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @role_id.name.eql?('Student')%>
+					    <%= link_to 'Cancel', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
+					<%end%>
 				<% end %>
-				<% if @role_id.name.eql?('Web Admin')%>
-					<%= link_to 'Return to User List', users_path(:role_id => @role_id.id), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.name.eql?('School Admin')%>
-				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.name.eql?('Teacher')%>
-				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
-				<% elsif @role_id.name.eql?('Student')%>
-				    <%= link_to 'Return to User List', users_path(:role_id => @role_id.id, :school_id => @school.id), class: "btn btn-white btn-xs"%>
-				<%end%>
-	        </div>
+			</div>
 			<% end %>
 			<%#= hidden_field_tag :send_mail, @send_mail%>
 	    </div>
