license popup width and image name size

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -102,6 +102,7 @@ label.error {display:block;}
 #school_state_wrapper select, .country-state-select{height:21px; padding:1px 0;}
 
 .no-rec-found{text-align:center;}
+.lic-listing-width{width:100px !important;}
 
 // Quick edit css
 .invisible{display:none;}
