--- a/app/views/schools/_license_list.html.erb
+++ b/app/views/schools/_license_list.html.erb
@@ -29,7 +29,7 @@
 					        <td class=""><%= lic.users.school_admins.count %></td>
 					        <td class=""><%= lic.users.teachers.count %></td>
 					        <td class=""><%= lic.users.students.count %></td>
-                            <td><%= text_field_tag "license_expiry_date[#{lic.id}]",lic.expiry_date ,:class=>"form-control datepicker", :placeholder=>"yyyy-mm-dd", :readonly=>true%></td>
+                            <td><%= text_field_tag "license_expiry_date[#{lic.id}]",lic.expiry_date ,:class=>"form-control datepicker lic-listing-width", :placeholder=>"yyyy-mm-dd", :readonly=>true%></td>
                         </tr>
 				   <% end %>
                 </tbody>
