--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -39,15 +39,14 @@
 							<% if f.object.book_cover_file_name && !f.object.book_cover_file_name.blank? %>
 								<%= image_tag f.object.book_cover.url(:small) %>
 							<% end %>
-							<%= f.file_field :book_cover %>
+							<%= f.file_field :book_cover, :class=>"image-file-name"%>
 				    	</div> 
 				    	<div class="col-md-4" >
 							<label class="form-label">EPub Book</label><span class="asterisk">*</span> 	<br />
 							<%if f.object.epub_file_name && !f.object.epub_file_name.blank? %>
 								<%= f.object.epub_file_name %>
 							<% end %>
-							<br />
-							<%= f.file_field :epub %>
+							<%= f.file_field :epub, :class=>"image-file-name" %>
 				    	</div>  
 					</div>
 				</div>
