--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,7 +27,8 @@
 
 .student-img {border-radius:128px; height:128px; width:128px; position:relative; overflow:hidden; box-shadow:inset 0 0 1px #a1a1a1;}
 
-.assign_arrows{float:left; vertical-align:middle; height:300px; padding:110px;}
+.assign_arrows{float:left; vertical-align:middle; height:300px; padding:110px 10px 0 30px;}
+.assign_arrows .btn{padding:3px 20px; background:#e0e0e0; margin-bottom:10px;}
 
 .alert_license_success{ background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;padding: 10px !important;}
 
