--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -19,6 +19,8 @@
 <div class="col-md-5">
 	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation") do %>
 		<%= hidden_field_tag(:email_id, @email_id)%>
+		<%= hidden_field_tag(:username, @username)%>
+		<%= hidden_field_tag(:school_id, @school_id)%>
         <h4 class="nomargin">Reset password</h4>
         <p class="mt5 mb20">Reset password to login and access your account.</p>
 		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
