changed condition for classromm adding for user

--- a/app/views/accessrights/_form.html.erb
+++ b/app/views/accessrights/_form.html.erb
@@ -34,7 +34,11 @@
 			<%=hidden_field_tag('checked_list[]')%>
 			<%=hidden_field_tag('unchecked_list[]')%>
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= submit_tag "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
+				<% if action_name.eql?('new') || action_name.eql?('create') %>
+	                <%= submit_tag "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
+				<%else%>
+				    <%= submit_tag "Update", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Updating...' } %>
+				<%end%>	
 				<%= link_to 'Cancel', accessrights_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			
