--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,9 +12,12 @@
 .lbjs {
   float: left;
 }
-.lbjs:last-of-type {
-  margin-left: 20px;
-}
+//.lbjs:last-of-type {
+//  margin-left: 20px;
+//}
+.dynamic{width:85%;}
+
+.listbox-alig{float:left;width:170px;}
 
 .pageheader .btg { font-size: 24px; margin-right: 5px;padding: 6px 7px; border: 2px solid #1D2939; -moz-border-radius: 50px;-webkit-border-radius: 50px; border-radius: 50px; }
 .pageheader .btg-lisence:before{vertical-align: top;}
@@ -27,7 +30,7 @@
 
 .student-img {border-radius:128px; height:128px; width:128px; position:relative; overflow:hidden; box-shadow:inset 0 0 1px #a1a1a1;}
 
-.assign_arrows{float:left; vertical-align:middle; height:300px; padding:110px 10px 0 30px;}
+.assign_arrows{float:left; vertical-align:middle; height:300px; padding:110px 30px;}
 .assign_arrows .btn{padding:3px 20px; background:#e0e0e0; margin-bottom:10px;}
 
 .alert_license_success{ background-color: #dff0d8;border-color: #d6e9c6;color: #3c763d;padding: 10px !important;}
