--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -76,14 +76,14 @@
 	                      <div class="col-sm-9">
 	                          <div class="form-group">
 	                              <%= label_tag "teachers", "Teachers", :class=>"control-label form-lable-multiselect" %>
-								  <div style="float:left;" id="assigned_div">
+								  <div style="listbox-alig;" id="assigned_div">
 									  <%= select_tag "already_assigned_id", options_from_collection_for_select(@assigned_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                              <div class="assign_arrows">
 	                                  <a href="#Remove" class="remove btn"> > </a><br />
 	                                  <a href="#Add" class="add btn"> < </a>
 	                              </div>
-	                              <div style="float:left;" id="all_div">
+	                              <div style="listbox-alig;" id="all_div">
 									  <%= select_tag "all_present_id", options_from_collection_for_select(@school_specific_teachers, "id", "first_name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 	                              </div>
 	                          </div>
