--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -21,6 +21,7 @@
 		<%= hidden_field_tag(:email_id, @email_id)%>
 		<%= hidden_field_tag(:username, @username)%>
 		<%= hidden_field_tag(:school_id, @school_id)%>
+		<%= hidden_field_tag(:app_type, @app_type)%>
         <h4 class="nomargin">Reset password</h4>
         <p class="mt5 mb20">Reset password to login and access your account.</p>
 		<%= label_tag 'password_label', "New Password", :class => "form-label"%>
